// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WhoToFollow - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex flex-col gap-2 custom-follow"
  data-testid="who-to-follow"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
  >
    Who to follow
  </h2>
  <div
    class="flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between"
      data-testid="user-item-1"
    >
      <div
        class="flex items-center gap-3"
        data-testid="user-info-1"
      >
        <div
          class="h-12 w-12"
          data-testid="avatar"
        >
          <img
            alt="Anna Pleb"
            data-testid="avatar-image"
            src="https://i.pravatar.cc/150?img=1"
          />
          <div
            data-testid="avatar-fallback"
          >
            A
          </div>
        </div>
        <div
          class="flex flex-col gap-0.5"
          data-testid="user-details-1"
        >
          <div
            class="text-base font-bold text-foreground"
          >
            Anna Pleb
          </div>
          <div
            class="text-sm text-muted-foreground opacity-50"
          >
            7SL4...98V5
          </div>
        </div>
      </div>
      <button
        class="flex h-10 w-10 items-center justify-center rounded-full bg-secondary/20 hover:bg-secondary/30 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-plus h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="19"
            x2="19"
            y1="8"
            y2="14"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center justify-between"
      data-testid="user-item-2"
    >
      <div
        class="flex items-center gap-3"
        data-testid="user-info-2"
      >
        <div
          class="h-12 w-12"
          data-testid="avatar"
        >
          <img
            alt="Carl Smith"
            data-testid="avatar-image"
            src="https://i.pravatar.cc/150?img=12"
          />
          <div
            data-testid="avatar-fallback"
          >
            C
          </div>
        </div>
        <div
          class="flex flex-col gap-0.5"
          data-testid="user-details-2"
        >
          <div
            class="text-base font-bold text-foreground"
          >
            Carl Smith
          </div>
          <div
            class="text-sm text-muted-foreground opacity-50"
          >
            327F...2YM4
          </div>
        </div>
      </div>
      <button
        class="flex h-10 w-10 items-center justify-center rounded-full bg-secondary/20 hover:bg-secondary/30 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-plus h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="19"
            x2="19"
            y1="8"
            y2="14"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center justify-between"
      data-testid="user-item-3"
    >
      <div
        class="flex items-center gap-3"
        data-testid="user-info-3"
      >
        <div
          class="h-12 w-12"
          data-testid="avatar"
        >
          <img
            alt="Mi Lei"
            data-testid="avatar-image"
            src="https://i.pravatar.cc/150?img=5"
          />
          <div
            data-testid="avatar-fallback"
          >
            M
          </div>
        </div>
        <div
          class="flex flex-col gap-0.5"
          data-testid="user-details-3"
        >
          <div
            class="text-base font-bold text-foreground"
          >
            Mi Lei
          </div>
          <div
            class="text-sm text-muted-foreground opacity-50"
          >
            PL5Z...2JSL
          </div>
        </div>
      </div>
      <button
        class="flex h-10 w-10 items-center justify-center rounded-full bg-secondary/20 hover:bg-secondary/30 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-plus h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="19"
            x2="19"
            y1="8"
            y2="14"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="w-full flex items-center justify-center gap-2 py-2 px-4 rounded-full border border-border hover:bg-secondary/80 cursor-pointer transition-colors"
    data-testid="sidebar-button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-users"
      data-testid="sidebar-button-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
      />
      <path
        d="M16 3.128a4 4 0 0 1 0 7.744"
      />
      <path
        d="M22 21v-2a4 4 0 0 0-3-3.87"
      />
      <circle
        cx="9"
        cy="7"
        r="4"
      />
    </svg>
    <span
      data-testid="sidebar-button-text"
    >
      See all
    </span>
  </button>
</div>
`;

exports[`WhoToFollow - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="who-to-follow"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
  >
    Who to follow
  </h2>
  <div
    class="flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between"
      data-testid="user-item-1"
    >
      <div
        class="flex items-center gap-3"
        data-testid="user-info-1"
      >
        <div
          class="h-12 w-12"
          data-testid="avatar"
        >
          <img
            alt="Anna Pleb"
            data-testid="avatar-image"
            src="https://i.pravatar.cc/150?img=1"
          />
          <div
            data-testid="avatar-fallback"
          >
            A
          </div>
        </div>
        <div
          class="flex flex-col gap-0.5"
          data-testid="user-details-1"
        >
          <div
            class="text-base font-bold text-foreground"
          >
            Anna Pleb
          </div>
          <div
            class="text-sm text-muted-foreground opacity-50"
          >
            7SL4...98V5
          </div>
        </div>
      </div>
      <button
        class="flex h-10 w-10 items-center justify-center rounded-full bg-secondary/20 hover:bg-secondary/30 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-plus h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="19"
            x2="19"
            y1="8"
            y2="14"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center justify-between"
      data-testid="user-item-2"
    >
      <div
        class="flex items-center gap-3"
        data-testid="user-info-2"
      >
        <div
          class="h-12 w-12"
          data-testid="avatar"
        >
          <img
            alt="Carl Smith"
            data-testid="avatar-image"
            src="https://i.pravatar.cc/150?img=12"
          />
          <div
            data-testid="avatar-fallback"
          >
            C
          </div>
        </div>
        <div
          class="flex flex-col gap-0.5"
          data-testid="user-details-2"
        >
          <div
            class="text-base font-bold text-foreground"
          >
            Carl Smith
          </div>
          <div
            class="text-sm text-muted-foreground opacity-50"
          >
            327F...2YM4
          </div>
        </div>
      </div>
      <button
        class="flex h-10 w-10 items-center justify-center rounded-full bg-secondary/20 hover:bg-secondary/30 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-plus h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="19"
            x2="19"
            y1="8"
            y2="14"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center justify-between"
      data-testid="user-item-3"
    >
      <div
        class="flex items-center gap-3"
        data-testid="user-info-3"
      >
        <div
          class="h-12 w-12"
          data-testid="avatar"
        >
          <img
            alt="Mi Lei"
            data-testid="avatar-image"
            src="https://i.pravatar.cc/150?img=5"
          />
          <div
            data-testid="avatar-fallback"
          >
            M
          </div>
        </div>
        <div
          class="flex flex-col gap-0.5"
          data-testid="user-details-3"
        >
          <div
            class="text-base font-bold text-foreground"
          >
            Mi Lei
          </div>
          <div
            class="text-sm text-muted-foreground opacity-50"
          >
            PL5Z...2JSL
          </div>
        </div>
      </div>
      <button
        class="flex h-10 w-10 items-center justify-center rounded-full bg-secondary/20 hover:bg-secondary/30 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-plus h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="19"
            x2="19"
            y1="8"
            y2="14"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="w-full flex items-center justify-center gap-2 py-2 px-4 rounded-full border border-border hover:bg-secondary/80 cursor-pointer transition-colors"
    data-testid="sidebar-button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-users"
      data-testid="sidebar-button-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
      />
      <path
        d="M16 3.128a4 4 0 0 1 0 7.744"
      />
      <path
        d="M22 21v-2a4 4 0 0 0-3-3.87"
      />
      <circle
        cx="9"
        cy="7"
        r="4"
      />
    </svg>
    <span
      data-testid="sidebar-button-text"
    >
      See all
    </span>
  </button>
</div>
`;
